# mini-config-rs

./: Cargo.toml  LICENSE  README.md
example/: Cargo.toml
example/src/: config.rs  main.rs
example/src/other_sample/: sample.rs
mini-config/: Cargo.toml
mini-config-derive/: Cargo.toml
mini-config-derive/src/: lib.rs
mini-config/src/: arc.rs  lib.rs
