[package]
name = "mini-config-derive"
version = "0.1.0"
edition = "2021"
description = "A supportive mini config derive macro"
authors = ["ZonBlade"]
readme = "../README.md"
repository = "https://github.com/zonblade/mini-config-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.23"
syn = "1.0.109"