[package]
name = "mini-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
derive = ["mini-config-derive"]

[dependencies]
mini-config-derive = {path = "../mini-config-derive", version = "*", optional = true}