[package]
name = "mini-config"
version = "0.1.2"
edition = "2021"
description = "Minimalistic Dynamic Configuration Library for Rust"
authors = ["ZonBlade"]
readme = "../README.md"
repository = "https://github.com/zonblade/mini-config-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
derive = ["mini-config-derive"]

[dependencies]
mini-config-derive = {path = "../mini-config-derive", version = "^0.1.1", optional = true}